# GPAClib

./: .gitmodules  CMakeLists.txt  GPAC.sh  README  README.md
circuits/: L2  amaury.gpac  arctan.gpac  assign.gpac  branicky.gpac  comments.gpac  compute_and_reset.gpac  conv  deriv.gpac  exp2.gpac  exp_minus.gpac  expsin  gargantua  gargantua64  graca_W0.gpac  graca_s.gpac  invdsin  max_cossin.gpac  mod10.gpac  pb.gpac  problem  rectangular  select.gpac  sigma  sinexp.gpac  sqrt_comp.gpac  tanh.gpac  upsilon.gpac
doc/: Doxyfile
src/: GPAC.hpp  GPACparser.hpp  GPACsim.cpp  circuit.hpp  gate.hpp  main.cpp  parser.hpp  utils.hpp
